[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Gui/Gui.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="GDScript" id=4]
script/source = "extends RichTextLabel

func display_message(message: String) -> void:
	self.text = message
	get_tree().get_root().get_node(\"Game\").freeze_game()
	yield(get_tree().create_timer(2.0), \"timeout\")
	self.text = \"\"
	get_tree().get_root().get_node(\"Game\").unfreeze_game()
"

[node name="GUI" type="Control"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 576.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Splash" type="Control" parent="."]
margin_left = -0.176758
margin_right = 1023.82
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="Splash"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.5
margin_top = -181.0
margin_right = 449.5
margin_bottom = -123.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1Min" type="Button" parent="Splash/Menu"]
margin_right = 176.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1 Minute"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2Min" type="Button" parent="Splash/Menu"]
margin_left = 180.0
margin_right = 357.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2 Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4Min" type="Button" parent="Splash/Menu"]
margin_left = 361.0
margin_right = 537.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4 Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8Min" type="Button" parent="Splash/Menu"]
margin_left = 541.0
margin_right = 718.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8 Minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldCup" type="Button" parent="Splash/Menu"]
margin_left = 722.0
margin_right = 899.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World Cup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Splash"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -79.0
margin_right = 176.0
margin_bottom = 134.0
text = "Soccer Slime! (Remake)


Written by Quin Pendragon (originally)
Mimicked by Hector Bennett
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTeamLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 40.0
text = "Left team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTeamLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -279.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 40.0
text = "Right Team"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftGoalHangingProgressBar" type="ProgressBar" parent="."]
margin_top = 520.0
margin_right = 512.0
margin_bottom = 523.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -244.0
margin_right = 64.0
margin_bottom = -220.0
text = "01:00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.5
margin_top = -82.0
margin_right = 176.5
margin_bottom = -24.0
bbcode_enabled = true
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Splash/Menu/1Min" to="." method="_on_1Min_button_up"]
[connection signal="button_down" from="Splash/Menu/2Min" to="." method="_on_2Min_button_down"]
[connection signal="button_up" from="Splash/Menu/4Min" to="." method="_on_4Min_button_up"]
[connection signal="button_up" from="Splash/Menu/8Min" to="." method="_on_8Min_button_up"]
